--- a/src/styles/contact.module.scss
+++ b/src/styles/contact.module.scss
@@ -9,49 +9,52 @@
         cursor: pointer;
     }
 
-    & img{
-        width: 60px;
-        height: 60px;
-        object-fit: cover;
-        border-radius: 100%;
-    }
-
-    & .data{
+    & .link{
         margin: 8px 10px 0;
         width: 100%;
-
-        & .topData{
-            display: flex;
-            height: 30px;
-            
-
-            & .name{
-                font-size: 16px;
+        text-decoration: none;
+    
+        & img{
+            width: 60px;
+            height: 60px;
+            object-fit: cover;
+            border-radius: 100%;
+        }
+    
+        & .data{
+            & .topData{
+                display: flex;
+                height: 30px;
+    
+                & .name{
+                    font-size: 16px;
+                    font-weight: 500;
+                    flex: 0.7;
+                    color: #000000;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                }
+    
+                & .date{
+                    text-align: end;
+                    flex: 0.3;
+                    margin: 0 0 0 20px;
+                    font-size: 13px;
+                    font-weight: 500;
+                    color: rgb(124, 124, 124);
+                    margin: 0 0 0 auto;
+                }
+            }
+    
+            & .message{
+                font-size: 14px;
                 font-weight: 500;
-                flex: 0.7;
+                color: rgb(124, 124, 124);
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
             }
-
-            & .date{
-                text-align: end;
-                flex: 0.3;
-                margin: 0 0 0 20px;
-                font-size: 13px;
-                font-weight: 500;
-                color: rgb(124, 124, 124);
-                margin: 0 0 0 auto;
-            }
-        }
-
-        & .message{
-            font-size: 14px;
-            font-weight: 500;
-            color: rgb(124, 124, 124);
-            overflow: hidden;
-            text-overflow: ellipsis;
-            white-space: nowrap;
         }
     }
 }
