--- a/src/styles/sendMessage.module.scss
+++ b/src/styles/sendMessage.module.scss
@@ -1,49 +1,56 @@
 @import "./variables.scss";
 
 .sendMessage{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin: auto 0 0;
     padding: 10px;
     background: #fff;
     border-bottom-right-radius: 10px;
-
-    & input{
-        font-size: 16px;
-        font-weight: 500;
-        margin: 0 20px;
-        padding: 10px 20px;
-        width: 100%;
-        background: rgb(241, 241, 241);
-        border: none;
-        border-radius: 10px;
-        outline: none;
-    }
-
-    & button{
+    
+    & form{
         display: flex;
         align-items: center;
-        padding: 12px;
-        font-size: 18px;
-        font-weight: 500;
-        color: #ffffff;
-        border: none;
-        border-radius: 10px;
-        cursor: pointer;
-        background: $standarBlueColor;
+        justify-content: space-between;
         
-        &:hover{
-            background: $standarBlueColorHover;
+        & input{
+            font-size: 16px;
+            font-weight: 400;
+            margin: 0 20px;
+            padding: 10px 20px;
+            width: 100%;
+            color: #000;
+            background: rgb(238, 238, 238);
+            border: none;
+            border-radius: 10px;
+            outline: none;
         }
-        
-        &.image{
-            font-size: 20px;
-            color: $standarBlueColor;
-            background: #ffffff;
-
+    
+        & button{
+            display: flex;
+            align-items: center;
+            padding: 12px;
+            font-size: 18px;
+            font-weight: 500;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            
+            &.send{
+                color: #fff;
+                background: $standarBlueColor;
+            }
+    
+            &.image{
+                color: $standarBlueColor;
+                background: none;
+    
+                &:hover{
+                    color: $standarBlueColorHover;
+                    background: none;
+                }
+            }
+            
             &:hover{
-                color: $standarBlueColorHover;
+                background: $standarBlueColorHover;
             }
         }
     }
