--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -1,3 +1,5 @@
+@import "./variables.scss";
+
 nav{
     display: flex;
     align-items: center;
@@ -12,11 +14,8 @@ nav{
         text-decoration: none;
 
         .iconLogo{
-            font-size: 25px;
-            padding: 8px;
-            color: #ffffff;
-            background: rgb(33, 146, 252);
-            border-radius: 5px;
+            width: 45px;
+            height: 45px;
         }
 
         & p{
@@ -25,34 +24,6 @@ nav{
             margin: 0 10px;
             color: #fff;
             letter-spacing: 0.5px;
-        }
-    }
-    
-    & .searchUser{
-        position: relative;
-        display: flex;
-        align-items: center;
-        margin: 0 0 0 40px;
-        padding: 0 15px;
-        max-width: 400px;
-        width: 100%;
-        height: 40px;
-        background: #fff;
-        border-radius: 10px;
-        
-        & input{
-            font-size: 15px;
-            font-weight: 500;
-            width: 95%;
-            height: 100%;
-            background: none;
-            border: none;
-            outline: none;
-        }
-
-        & .iconSearch{
-            font-size: 20px;
-            margin: 0 0 0 10px;
         }
     }
 
@@ -66,15 +37,8 @@ nav{
             position: relative;
             margin: 0 0 0 40px;
 
-            & .iconBell{
-                font-size: 20px;
-                color: #fff;
-                background: none;
-                border: none;
-                cursor: pointer;
-            }
-
             &.user{
+                position: relative;
                 display: flex;
 
                 & img{
